tests/NormalTests/paczka2/big_fuzzy/99015574.err
Error in line 10: u6H S134 14,6
Error in line 34: WldW9i6UW S134 258,9
Error in line 50: A547 A511 208,4
Error in line 57: u6H S134 60,0
Error in line 53: WldW9i6UW A547 78,6
Error in line 61: WldW9i6UW A511 2,5
Error in line 70: HrES8aJ A547 2,5
Error in line 66: WldW9i6UW S134 87,1
Error in line 84: A547 A511 230,7
Error in line 76: WldW9i6UW S203 23,9
Error in line 88: A547 S134 46,5
Error in line 96: s86Mw S134 10,8
Error in line 94: HrES8aJ S134 61,4
Error in line 90: WldW9i6UW A511 86,3
Error in line 112: WldW9i6UW A511 50,	
Error in line 113: LsO S203 83,71
Error in line 114: qMViN93 S134 18,2
Error in line 111: WldW9i6UW A547 7,8
Error in line 108: A547 S203 82,9
Error in line 119: A547 S134 29,3
Error in line 110: HrES8aJ S203 68,8
Error in line 89: u6H S203 84,6
Error in line 126: WldW9i6UW S203 96,80
Error in line 139: u6H A547 96,0
Error in line 154: s86Mw S134 48,5
Error in line 159: WldW9i6UW A511 24,m
Error in line 162: s86Mw S203 92,3
Error in line 163: u6H A511 27,1
Error in line 184: u6H S203 328,0
Error in line 190: WldW9i6UW S203 60,5
Error in line 215: s86Mw A511 84,8
Error in line 217: s86Mw A547 62,7
Error in line 219: LsO S203 45,2
Error in line 229: A547 S203 50,0
Error in line 232: WldW9i6UW S203 98,3
Error in line 235: WldW9i6UW A547 25,6
Error in line 225: s86Mw S203 201,9
Error in line 239: HrES8aJ A547 264,0
Error in line 243: HrES8aJ S203 34,8
